This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
5/7/25: Added option in NAvigator Realign setup dialog to apply setting for
treatment of image shift to Realign to Item run from Navigator dialog or menu.

5/7/25: Improved behavior of program and ability to exit when FEI-SEEmserver
dies or scope computer dies.

5/7/25: Added option to WaitForMidnight to close valves and repoen them.

5/7/25: Fixed Step To & Adjust IS not stopping for custom pattern (In 5.1).

5/5/25: SEM_4-2-0beta16
5/5/25: Added UI Automation code to control beam stop on Thermo which is
probably useless.

5/5/25: Changes in FEIScopePlugin for new UTAPI interfaces, mostly untested.

5/5/25: SEM_4-1-24
5/5/25: Allowed Wait for Drift task to be run at a subset of items in
Navigator Acquire at Items (In 4.1).

5/5/25: Switched to having separate plugins for connecting to DE camera with
API1 or API2; the UseAPI2forDE property is irrelevant with the API2 plugin.

5/5/25: When saving final image from DE camera before saving any frames, the
save directory will be set properly.

5/5/25: Really fixed DE live mode and removed restriction on using 32-bit
version (In 4.1).

5/1/25: Allowed a value for MakeFEIerrorBeTimeout to set the interval from
the error to the timeout and possible retry.

4/17/25: Fixed Tools menu contents.

4/17/25: Fixed setting a subdirectory for frames for DE camera, and fixed live
mode for API 2 (In 4.1).

4/15/25: Fixed Shift to Marker not being disabled with Navigator closed (In
4.1).

4/11/25: Fixed loss of Navigator menu.

4/9/25: Allowed space after '#' in other keyword comments in Python scripts.

4/9/25: Modernized default values for camera parameters.

4/9/25: Added property to set grid mesh for measureing pixel size from grid
bars.
