@@ -3,7 +3,10 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
-5/7/25: Added option in NAvigator Realign setup dialog to apply setting for
+5/9/25: Made it set unchanged properties in DE server on every acquisition
+unless a some kind of operation is running, in case images are taken in MC.
+
+5/7/25: Added option in Navigator Realign setup dialog to apply setting for
 treatment of image shift to Realign to Item run from Navigator dialog or menu.
 
 5/7/25: Improved behavior of program and ability to exit when FEI-SEEmserver
